<resources>
    <string name="app_name">Spektogram</string>
    <string name="telegram_messenger">Telegram messenger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_accept">Accept</string>

    <string name="title_activity_chat">ChatActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="reply">reply</string>
    <string name="forward">reply</string>
    <string name="copy">copy</string>
    <string name="delete">copy</string>
    <string name="message">Message</string>
    <string name="take_picture">Take Picture</string>
    <string name="send_video">Send Video</string>
    <string name="send_file">Send File</string>S
    <string name="send_location">Send Location</string>

    <string name="title_activity_sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_on_login">Don\'t have an account? So sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="send_code">Send code</string>
    <string name="go_send">GO</string>
    <string name="phone_number">Phone number</string>

    <string name="new_group">New Group</string>
    <string name="new_message">New Message</string>
    <string name="new_secret_chat">New Secret Chat</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="invite_friend">Invite friend</string>

    <string name="title_activity_next_page_callback">NextPageCallback</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="change_phonenumber">Change your phone number</string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <string name="enter_code_here">Enter code here</string>
    <string name="code_has_been_sent">Code has been sent to your device.\nIt will arrive shortly.\nIf there is something wrong with it, we\'ll call you in 2:00</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name (optional)</string>
    <string name="area">Area</string>
    <string name="title_activity_select_action">SelectActionActivity</string>
    <string name="create_new_group">Create new group</string>
    <string name="download">Download</string>
    <string name="chat_background">Chat background</string>
    <string name="change_chat_background">Change chat background</string>
    <string name="title_activity_select_background">SelectBackgroundActivity</string>

    <string name="clear_chat_history">Clear chat history</string>
    <string name="your_phone">Your phone</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="server_error">Server not available</string>
    <string name="not_valid_phone">Not valid phone number</string>
    <string name="enter_group_name">Enter group name</string>


    <item type="id" name="TAG_MESSAGE_ID_VIEW"/>
    <item type="id" name="TAG_HOLDER_VIEW"/>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="chat_history_cleared">Chat history has been cleared</string>
    <string name="clear_messages">Clear messages</string>
    <string name="logout">Logout</string>

</resources>
