<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/last_name" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/sign_in"/>

    </LinearLayout>

</RelativeLayout>
