<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.telegram.spektogram.fragment.CodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_has_been_sent"
            android:textColor="@android:color/darker_gray"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/code_field"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/enter_code_here" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/send_code"/>
    </LinearLayout>

</RelativeLayout>
