<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.telegram.spektogram.fragment.PhoneNumberFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/your_phone"
            android:textColor="@android:color/white"

            android:id="@+id/textView2"

            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/country_code_field"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:singleLine="true"
                android:inputType="phone"
                android:hint="@string/area" />

            <EditText
                android:id="@+id/phone_number_field"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:singleLine="true"

                android:inputType="phone"
                android:hint="@string/phone_number" >
                <requestFocus/>
                </EditText>


        </LinearLayout>

        <Button
            android:id="@+id/send_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:padding="20dp"
            android:text="@string/send_code"/>
    </LinearLayout>

</RelativeLayout>
